--- a/BookManager.API/appsettings.json
+++ b/BookManager.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookManagerCs": "server=localhost; database=BookManagerDb; User ID=sa;Password=senha@123;  trustServerCertificate=true;"
+  }
 }
