refactor: Atualizando o csproj.

--- a/BookManager.App/BookManager.App.csproj
+++ b/BookManager.App/BookManager.App.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\BookManager.Infra\BookManager.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Loans\" />
+  </ItemGroup>
+
 </Project>
