--- a/BookManager.API/BookManager.API.csproj
+++ b/BookManager.API/BookManager.API.csproj
@@ -14,8 +14,9 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
-
+	
   <ItemGroup>
     <ProjectReference Include="..\BookManager.App\BookManager.App.csproj" />
     <ProjectReference Include="..\BookManager.Core\BookManager.Core.csproj" />
