--- a/BookManager.Core/BookManager.Core.csproj
+++ b/BookManager.Core/BookManager.Core.csproj
@@ -5,5 +5,9 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+	</ItemGroup>
 
 </Project>
