--- a/BookManager.App/BookManager.App.csproj
+++ b/BookManager.App/BookManager.App.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+	</ItemGroup> 	
+	
   <ItemGroup>
     <ProjectReference Include="..\BookManager.Core\BookManager.Core.csproj" />
     <ProjectReference Include="..\BookManager.Infra\BookManager.Infra.csproj" />
